# fp-in-haskell

./: .gitignore  LICENSE  README.md  fp-in-haskell.cabal
src/: FbInHaskell.hs
src/FpInHaskell/: List.hs
test/: Tests.hs
test/FpInHaskell/List/: Tests.hs
