name:                fp-in-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/filosganga/haskell-wb#readme
license:             BSD3
license-file:        LICENSE
author:              Filippo De Luca
maintainer:          me@filippodeluca.com
copyright:           2017 Filippo De Luca
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:    src
  default-language:    Haskell2010
  build-depends: base >= 4.7 && < 5
  exposed-modules:   FpInHaskell.List

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Tests.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >= 4 && < 5
    , tasty >= 0.7
    , tasty-hunit >= 0.7
    , tasty-smallcheck >= 0.7
    , tasty-quickcheck >= 0.7
    , fp-in-haskell